# mqttEmbeded

./: README.md
build-mqtt-Desktop-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  mqtt  qtcsettings.cmake
build-mqtt-Desktop-Debug/mqtt_autogen/: deps
build-mqttReader-Desktop-Debug/: CMakeCache.txt.prev  build.ninja  cmake_install.cmake  mqttReader
build-mqttReader-Desktop-Debug/mqttReader_autogen/: deps
mqtt/: CMakeLists.txt  main.cpp
mqttReader/: CMakeLists.txt  main.cpp
